[package]
name = "lute2anki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
csv = "1.3.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_with = { version = "3.8.1", features = ["macros"] }
